--- a/archive/myDiagnosis-Copy1.ipynb
+++ b/archive/myDiagnosis-Copy1.ipynb
@@ -39,33 +39,82 @@
     "    lane_warped = I.warping(lane_thresholded)\n",
     "    \n",
     "    # diag4\n",
-    "    lane_slidingwindowed = I.sliding_window_method(lane_warped)\n",
+    "    left_lane_pts,right_lane_pts = I.findLanePoints(lane_warped)\n",
     "    \n",
-    "    lx,rx,ly,ry,lfx,rfx,lc,rc,lr2,rr2,oc= I.findCurvature(lane_slidingwindowed)\n",
+    "    lane_pts = cv2.bitwise_or(left_lane_pts,right_lane_pts)\n",
+    "    \n",
+    "    lx,rx,ly,ry,lfx,rfx,lc,rc,lr2,rr2,oc= I.findCurvature(left_lane_pts, right_lane_pts)\n",
     "    info = {'lc':lc, 'rc': rc, 'lr2':lr2, 'rr2': rr2, 'oc': oc}\n",
     "    \n",
     "    # diag5\n",
     "    lane_detected = I.drawCurves(lx, rx, ly, ry, lfx, rfx)\n",
     "\n",
     "    # diag1 \n",
-    "    lane_unwarped = I.unwarping(lane_dst, lane_slidingwindowed)\n",
+    "    lane_unwarped = I.unwarping(lane_dst, lfx, rfx)\n",
     "\n",
     "    # assemble diagnostic screens\n",
-    "    diagScreen = I.createDiagScreen(lane_unwarped, lane_thresholded, \n",
-    "                                 lane_warped, lane_slidingwindowed*255,\n",
+    "    diagScreen = I.createDiagScreen(lane_unwarped, lane_thresholded*255, \n",
+    "                                 lane_warped*255, lane_pts*255,\n",
     "                                  lane_detected, info)\n",
     "    return diagScreen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "lane_images = glob.glob('./project_video_frames/*.jpeg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[94, 440]\n",
+      "437\n",
+      "424\n",
+      "435\n",
+      "429\n",
+      "420\n",
+      "410\n",
+      "390\n",
+      "371\n",
+      "356\n",
+      "323\n",
+      "[94, 440]\n",
+      "929\n",
+      "929\n",
+      "914\n",
+      "914\n",
+      "914\n",
+      "882\n",
+      "880\n",
+      "880\n",
+      "880\n",
+      "821\n"
+     ]
+    }
+   ],
+   "source": [
+    "lane_images = glob.glob('./project_video_frames/*.jpeg')\n",
+    "\n",
+    "if not os.path.exists('./diag/'):\n",
+    "    os.makedirs('./diag/')\n",
+    "\n",
+    "for s in lane_images[:10]:   \n",
+    "    result = process_image(mpimg.imread(s))\n",
+    "    mpimg.imsave('./diag/'+s[-20:], result)"
    ]
   },
   {
@@ -4075,83 +4124,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27.6003050978\n",
-      "54.4722227323\n",
-      "29.3840065763\n",
-      "48.8272828368\n",
-      "79.1792831513\n",
-      "1200.87475575\n",
-      "59.1736816816\n",
-      "1256.66536119\n",
-      "651.248166647\n",
-      "11.8031264138\n",
-      "654.793080175\n",
-      "7.71988221222\n",
-      "1342.79414461\n",
-      "48.1696337706\n",
-      "1270.50136239\n",
-      "38.8583340053\n",
-      "1737.20848804\n",
-      "23.47900804\n",
-      "1627.91488774\n",
-      "14.826617559\n",
-      "4528.00577974\n",
-      "4.09153886764\n",
-      "4542.38651223\n",
-      "3.76493228363\n",
-      "4566.48616678\n",
-      "46.953744272\n",
-      "4554.34822855\n",
-      "36.4758341648\n",
-      "33705.4847157\n",
-      "25.3334471574\n",
-      "33694.735679\n",
-      "16.3652580127\n",
-      "36.7832109749\n",
-      "61.710907481\n",
-      "33.0709347028\n",
-      "77.6551420239\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "expected non-empty vector for x",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-6d2f2b35ad74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlane_images\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmpimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mmpimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimsave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./diag_challenge/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-308482c80f0e>\u001b[0m in \u001b[0;36mprocess_image\u001b[0;34m(lane_img)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mlane_slidingwindowed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msliding_window_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlane_warped\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mlx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mly\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mry\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlfx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrfx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlr2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrr2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moc\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindCurvature\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlane_slidingwindowed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0minfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'lc'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rc'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lr2'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlr2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rr2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrr2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'oc'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moc\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/tz/Documents/carnd/CarND-Advanced-Lane-Lines/myImageProcessing.py\u001b[0m in \u001b[0;36mfindCurvature\u001b[0;34m(lane_slidingwindowed, y_arr)\u001b[0m\n\u001b[1;32m    263\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m     \u001b[0;31m# Fit 2 degree polynomials, using y values as x inputs, as vice versa.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 265\u001b[0;31m     \u001b[0mleft_fit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolyfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlefty\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleftx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    266\u001b[0m     \u001b[0mleft_fitx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalcFitx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_arr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft_fit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/tz/anaconda/envs/carnd-term1/lib/python3.5/site-packages/numpy/lib/polynomial.py\u001b[0m in \u001b[0;36mpolyfit\u001b[0;34m(x, y, deg, rcond, full, w, cov)\u001b[0m\n\u001b[1;32m    557\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"expected 1D vector for x\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 559\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"expected non-empty vector for x\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    560\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    561\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"expected 1D or 2D array for y\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected non-empty vector for x"
-     ]
-    }
-   ],
-   "source": [
-    "# This cell was run last after all the necessary fixes made to the original processing methods. \n",
-    "\n",
-    "lane_images = glob.glob('./challenge_video_frames/*.jpeg')\n",
-    "\n",
-    "if not os.path.exists('./diag_challenge/'):\n",
-    "    os.makedirs('./diag_challenge/')\n",
-    "\n",
-    "for s in lane_images[3:]: \n",
-    "    result = process_image(mpimg.imread(s))\n",
-    "    mpimg.imsave('./diag_challenge/'+s[-20:], result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -4175,9 +4147,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "x"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
